--- a/src/widgets/stasheswidget.ui
+++ b/src/widgets/stasheswidget.ui
@@ -19,7 +19,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTreeView" name="treeView">
+    <widget class="TreeView" name="treeView">
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
@@ -79,6 +79,11 @@
    <class>PushButton</class>
    <extends>QPushButton</extends>
    <header>core/pushbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>TreeView</class>
+   <extends>QTreeView</extends>
+   <header location="global">core/treeview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
