--- a/src/widgets/tagswidget.ui
+++ b/src/widgets/tagswidget.ui
@@ -74,7 +74,7 @@
   <customwidget>
    <class>TreeView</class>
    <extends>QTreeView</extends>
-   <header>widgets/treeview.h</header>
+   <header>core/treeview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
