--- a/src/dialogs/clonedialog.ui
+++ b/src/dialogs/clonedialog.ui
@@ -79,6 +79,12 @@
        <property name="enabled">
         <bool>false</bool>
        </property>
+       <property name="maximum">
+        <number>99999</number>
+       </property>
+       <property name="value">
+        <number>1</number>
+       </property>
       </widget>
      </item>
      <item row="1" column="0">
@@ -199,6 +205,22 @@
     <hint type="destinationlabel">
      <x>144</x>
      <y>81</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>CloneDialog</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>186</x>
+     <y>271</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>163</x>
+     <y>241</y>
     </hint>
    </hints>
   </connection>
