--- a/src/settings/settingspagebase.ui
+++ b/src/settings/settingspagebase.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>settingsBase</class>
- <widget class="QWidget" name="settingsBase">
+ <class>SettingsPageBase</class>
+ <widget class="QWidget" name="SettingsPageBase">
   <property name="geometry">
    <rect>
     <x>0</x>
