--- a/src/settings/settingspagediff.ui
+++ b/src/settings/settingspagediff.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DiffSettings</class>
- <widget class="QWidget" name="DiffSettings">
+ <class>SettingsPageDiff</class>
+ <widget class="QWidget" name="SettingsPageDiff">
   <property name="geometry">
    <rect>
     <x>0</x>
